[build-system]
build-backend = "flit_core.buildapi"
requires = [
    "flit_core >=2,<4",
]

[dependency-groups]
docs = [
    "mkdocs-material==9.5.49",
    "mkdocs-same-dir==0.1.3",
]
lint = [
    "pre-commit==3.3.3",
]
test = [
    "packaging==23.1",
    "pyprojectsort",
    "pytest-cov==4.1.0",
    "pytest==7.4.0",
]

[project]
authors = [
    { name = "Kieran Ryan" },
]
classifiers = [
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    "natsort>=8.4.0,<9",
    "tomli-w>=1.0.0",
    "tomli>=2.0.1,<3",
]
description = "Formatter for pyproject.toml files"
dynamic = [
    "version",
]
keywords = [
    "formatter",
    "pyproject",
]
name = "pyprojectsort"
readme = "README.md"
requires-python = ">=3.8"

[project.license]
file = "LICENSE"

[project.scripts]
pyprojectsort = "pyprojectsort.main:main"

[project.urls]
Changelog = "https://github.com/kieran-ryan/pyprojectsort/blob/main/CHANGELOG.md"
Documentation = "https://kieran-ryan.github.io/pyprojectsort"
Source = "https://github.com/kieran-ryan/pyprojectsort"
Tracker = "https://github.com/kieran-ryan/pyprojectsort/issues"

[tool.coverage.html]
directory = ".reports"

[tool.coverage.report]
exclude_lines = [
    "if __name__ == \"__main__\":",
    "if typing.TYPE_CHECKING:",
]
fail_under = 75.0
show_missing = true

[tool.coverage.run]
branch = true
omit = [
    "*/tests/*",
    "*/venv/*",
]

[tool.coverage.xml]
output = ".reports/coverage.xml"

[tool.flit.module]
name = "pyprojectsort"

[tool.pytest.ini_options]
addopts = "--doctest-modules -rA --verbose --junitxml=.reports/junit.xml -o junit_family=legacy --cov-report=term --cov-report=html --cov-report=xml --cov=pyprojectsort"
testpaths = [
    "pyprojectsort",
    "tests",
]

[tool.ruff]
target-version = "py37"

[tool.ruff.lint]
ignore = [
    "ANN",
    "ARG",
    "COM812",
    "D203",
    "D213",
    "D406",
    "D407",
    "DTZ005",
    "FIX002",
    "G004",
    "INP001",
    "ISC001",
    "S101",
    "T201",
    "TD003",
]
select = [
    "ALL",
]

[tool.ruff.lint.isort]
required-imports = [
    "from __future__ import annotations",
]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.uv]
default-groups = [
    "docs",
    "lint",
    "test",
]

[tool.uv.sources.pyprojectsort]
workspace = true
